# rarch

./: .agent.md  .cursorrules  .gitignore  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_ZH.md  CONTRIBUTING.md  CONTRIBUTING_ZH.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README_ZH.md  rarch.toml  rarch.toml.example  rarch_journal.bak.json  rarch_journal.old.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report_zh.md  feature_request.md  feature_request_zh.md
.github/workflows/: release.yml
docs/: DEVELOPMENT_PLAN.md  DEVELOPMENT_PLAN_ZH.md
src/: ai.rs  config.rs  engine.rs  engine_tests.rs  journal.rs  main.rs  native_model.rs  ui.rs
test_ai_dir/: cat.txt
test_ai_dir/output/Projects/: project_plan_draft.txt  rarch.toml
