[package]
name = "rarch"
version = "0.1.1"
authors = ["Serein-213 <serein-213@foxmail.com>"]
edition = "2021"
description = "A blazing fast, content-aware, and atomic file organization tool with undo support."
license = "MIT OR Apache-2.0"
repository = "https://github.com/serein-213/rarch"
readme = "README.md"
keywords = ["file-organizer", "utility", "cli", "automation", "deduplication"]
categories = ["command-line-utilities", "filesystem"]

[features]
default = []
ui = ["ratatui", "crossterm"]
ai = ["reqwest"]
ai-native = ["candle-core", "candle-nn", "candle-transformers", "tokenizers", "hf-hub"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
walkdir = "2"
anyhow = "1.0"
fs_extra = "1.3"
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
infer = "0.19"
sha2 = "0.10"
hex = "0.4"
notify = "6.1.1"
rayon = "1.10"
ratatui = { version = "0.26", optional = true }
crossterm = { version = "0.27", optional = true }
regex = "1.12.3"
comfy-table = "7.2.2"
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true }
clap_complete = "4.5.66"

# Native AI dependencies (Candle)
candle-core = { version = "0.8.0", optional = true }
candle-nn = { version = "0.8.0", optional = true }
candle-transformers = { version = "0.8.0", optional = true }
tokenizers = { version = "0.21.0", optional = true }
hf-hub = { version = "0.4.0", optional = true }

[dev-dependencies]
tempfile = "3.10"
